--- a/main.html
+++ b/main.html
@@ -1,16 +1,23 @@
-<!DOCTYPE html>
-
+!DOCTYPE html>
 <html>
-
 <head>
-	<link rel="stylesheet" href="styles.css">
-</head>
 
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+
+</head>
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+
+    <h1> What is the capital of India?</h1>
+    <ol>
+        <ul>
+            <b>
+        <li>Delhi</li>
+        <li>Mumbai</li>
+            </b>
+        </ul><
+    </ol>
+        <blockquote cite=<p>New Delhi is the capital of India and an administrative district of NCT Delhi.</p></blockquote>
 
 </body>
-
 </html>
